# Projeto-Tabela

./: .env  LICENSE  README.md  banco_de_dados.py  pyproject.toml
excelpython/: pyproject.toml
